src/objects/CT_Post__c.object
<CustomObject>
    <fields>
        <fullName>CT_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>CT Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Formatted_Body__c</fullName>
        <label>Formatted Body</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>RARE_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RARE Campaign</label>
        <referenceTo>RARE_Campaign__c</referenceTo>
        <relationshipLabel>Posts</relationshipLabel>
        <relationshipName>Posts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Post</label>
    <nameField>
        <label>Post Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Posts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>